<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.AdminRegisterActivity"
    android:background="@color/aqua">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/aclonica"
        android:text="Add Admin"
        android:textColor="@color/white"
        android:textSize="18dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullnameet"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_marginHorizontal="20sp"
        app:helperText="Required"
        app:helperTextTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/admin_full_name"
            android:drawableRight="@drawable/baseline_person"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonenumberet"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_marginHorizontal="20sp"
        app:helperText="Required"
        app:helperTextTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:counterMaxLength="13"
        app:counterEnabled="true"
        app:counterTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="number"
            android:hint="@string/admin_phone_number"
            android:drawableRight="@drawable/baseline_phone_android"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailet"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_marginHorizontal="20sp"
        app:helperText="Required"
        app:helperTextTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/admin_email"
            android:drawableRight="@drawable/baseline_alternate_email"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addresset"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_marginHorizontal="20sp"
        app:helperText="Required"
        app:helperTextTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/admin_address"
            android:drawableRight="@drawable/baseline_add_location"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_marginHorizontal="20sp"
        app:helperText="Required"
        app:helperTextTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:counterMaxLength="15"
        app:counterEnabled="true"
        app:counterTextColor="@color/white"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPassword"
            android:hint="@string/admin_password"
            android:maxLength="15"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_marginHorizontal="20sp"
        app:helperText="Required"
        app:helperTextTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:hint="type"
            android:text="Admin"
            android:drawableRight="@drawable/baseline_add_location"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="-5dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backProfile"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="BACK"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:text="SUBMIT"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            />

    </LinearLayout>



</LinearLayout>